--- a/WebBackUp/src/main/resources/application.properties
+++ b/WebBackUp/src/main/resources/application.properties
@@ -2,7 +2,7 @@
 server.port=8080
 
 ### MYSQL 配置
-spring.datasource.url=jdbc:mysql://localhost:3306/pension?useUnicode=true&characterEncoding=utf-8&useSSL=false?serverTimezone=GMT%2B8
+spring.datasource.url=jdbc:mysql://localhost:3306/pension?useUnicode=true&characterEncoding=utf-8&useSSL=false&serverTimezone=GMT%2B8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
