--- a/WebFrontUp/package.json
+++ b/WebFrontUp/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.6.8",
     "element-plus": "^2.7.0",
+    "moment": "^2.30.1",
     "vue": "^3.4.21",
     "vue-router": "^4.3.0"
   },
